--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
-body{
-	margin: 0px;
-	height: max-content;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.page {
+    flex: 1;
 }
 header{
 	margin: 0px;
