--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body {
     min-height: 100vh;
 }
 
-.page {
-    flex: 1;
-}
 header{
 	margin: 0px;
 	height: 10%;
@@ -22,18 +19,47 @@ h1{
 	color: aqua;
 	margin: 0px;
 }
-.navigation{
-	background-color: rgb(0, 217, 255);
-	float: left;
-	width: 20%;
-	height: 80%;
+.main-container {
+    display: flex;
+    height: 80%;
+    width: 100%;
 }
-.page{
-	float: left;
-	width: 80%;
+
+.navigation {
+    background-color: rgb(0, 217, 255);
+    width: 20%;
+    height: 100%;
+}
+
+.page {
+    width: 80%;
+    height: 100%;
 }
 footer{
 	height: 10%;
 	background-color: black;
 	margin-bottom: 0px;
+	color: azure;
+	text-align: center;
+}
+.footerLeft{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+	float: left;
+	width: 33%;
+}
+.footerRight{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+	float: left;
+	width: 33%;
+}
+.footerCenter{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+	float: left;
+	width: 34%;
 }
